--- a/views/users/orderDetails.ejs
+++ b/views/users/orderDetails.ejs
@@ -165,6 +165,13 @@
             <p>&#8377;<%= order.totalAmount.toFixed(2) %>
             </p>
           </div>
+          <br>
+          <div class="order-info-item"
+            style="border: 1px solid #000000; padding: 8px; margin-right: 4px; border-radius: 5px;">
+            <h6><strong>PayableAmount :</strong></h6>
+            <p>&#8377;<%= order.payableAmount.toFixed(2) %>
+            </p>
+          </div>
 
 
 
