--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -542,6 +542,7 @@
     </div>
 
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://unpkg.com/cropperjs@1.5.12/dist/cropper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="/js/admin/products.js"></script>
