--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -256,7 +256,7 @@
                       <th style="color: white;">Image4</th>
                       <th style="color: white;">Name</th>
                       <th style="color: white;">category</th>
-                      <th style="color: white;">Brand</th>
+                      <!-- <th style="color: white;">Brand</th> -->
                       <th style="color: white;">Price</th>
                       <th style="color: white;">stock</th>
                       <th style="color: white;">List</th>
@@ -296,9 +296,7 @@
                               <% } %>
                             <% }) %>
                           </td>
-                          <td>
-                            <%= data.brand %>
-                          </td>
+                          <!--  -->
                           <td>
                             <%= data.price %>
                           </td>
