--- a/views/admin/offermanagement.ejs
+++ b/views/admin/offermanagement.ejs
@@ -548,6 +548,10 @@
             timer: 1500
         }).then(() => {
             document.getElementById('addOfferForm').submit();
+            setTimeout(() => {
+              
+              window.location.reload();
+            },1500)
         });
 
         return true;
