--- a/views/users/starting.ejs
+++ b/views/users/starting.ejs
@@ -1,10 +1,3 @@
-<!-- /*
-* Bootstrap 5
-* Template Name: Furni
-* Template Author: Untree.co
-* Template URI: https://untree.co/
-* License: https://creativecommons.org/licenses/by/3.0/
-*/ -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -26,25 +19,24 @@
       rel="stylesheet"
     />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Bebas+Neue&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Marmelad&family=Nanum+Gothic:wght@400;700;800&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-<link href="/css/tiny-slider.css" rel="stylesheet" />
-<link rel="stylesheet" href="/css/style.css">
-<link href="/css/bootstrap.min.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&family=Bebas+Neue&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Marmelad&family=Nanum+Gothic:wght@400;700;800&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quicksand:wght@300..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="/css/tiny-slider.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/css/style.css">
+    <link href="/css/bootstrap.min.css" rel="stylesheet" />
     <title>
       Starting of men's hub
     </title>
   </head>
 
   <body>
-  
-    <nav class="custom-navbar navbar navbar navbar-expand-md" arial-label="Furni navigation bar" >
+    <nav class="custom-navbar navbar navbar-expand-md navbar-light fixed-top" aria-label="Furni navigation bar" style="background-color: #3b5d50;">
       <div class="container">
-        <div id="navlogo" >
-          <a href="/home"><img src="/images/img/logo/A_logo_with_the_letters_M_and_H_together_with_a_cap_on_M-removebg-preview.png" alt=""></a>
+        <div id="navlogo" class="d-flex align-items-center">
+          <a href="/home"><img src="/images/img/logo/A_logo_with_the_letters_M_and_H_together_with_a_cap_on_M-removebg-preview.png" alt="" class="img-fluid"></a>
         </div>
         <a class="navbar-brand" href="/home"><span class="brandname">Men's Hub </span></a>
-    
+
         <button
           class="navbar-toggler"
           type="button"
@@ -56,57 +48,56 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-    
+
         <div class="collapse navbar-collapse" id="navbarsFurni">
           <ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
             <li class="nav-item active">
               <a class="nav-link" href="/home">Home</a>
             </li>
-            <li><a class="nav-link" href="/login">Shop</a></li>
-            <li><a class="nav-link" href="/about">About us</a></li>
-            <li><a class="nav-link" href="/contact">Contact us</a></li>
+            <li class="nav-item"><a class="nav-link" href="/login">Shop</a></li>
+            <li class="nav-item"><a class="nav-link" href="/about">About us</a></li>
+            <li class="nav-item"><a class="nav-link" href="/contact">Contact us</a></li>
           </ul>
-          <ul class="neddit">
-            <li class="neddit1">
-              <a style="text-decoration: none;" href="/login"><p style="margin-left: 11px; margin-bottom:0; color:rgb(185, 182, 182); text-decoration: none;">login/Register</p></a>
-              
-            </li>
-          </ul>
-    
-          <ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-            <li>
-              <a href="wishlist.html">
-                <a href="/login"><i class="fa fa-heart wishicon2" style="color: white;"> </i></a>        
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="/login" style="text-decoration: none;">
+                <p class="m-0 " style="color: aliceblue;">Login/Register</p>
               </a>
             </li>
-            <li>
-              <a class="nav-link" href="/login"><img src="/images/user.svg" /></a>
+          </ul>
+
+          <ul class="custom-navbar-cta navbar-nav ms-5">
+            <li class="nav-item">
+              <a href="/login" class="nav-link"><img src="/images/img/The new whish list/wishlist.png" alt="whislist" class="img-fluid"></a>
             </li>
-            <li>
-              <a class="nav-link" href="#"
-                ><img src="/images/cart.svg"
-              /></a>
+            <li class="nav-item">
+              <a class="nav-link" href="/login"><img src="/images/user.svg" alt="User Icon" class="img-fluid"/></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"><img src="/images/cart.svg" alt="Cart Icon" class="img-fluid"/></a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
 
-
-    <div class="container-fluid homebanner"></div>
-    
+    <div class="container-fluid homebanner py-5 mt-5"></div>
 
     <!-- Start Product Section -->
     <div class="product-section">
       <div class="container">
         <div class="row">
-          <h3 class="populcoll" style="margin-bottom: 50px"><span style="color: #3b5d50">POPULAR</span> CATEGORIES</h3>
+          <h3 class="text-center mb-5 populcoll">
+            <span style="color: #3b5d50">POPULAR</span> CATEGORIES
+          </h3>
           <% category.forEach((data) => { %>
-            <div class="col-12 col-md-4 col-lg-3 mb-5 mb-md-0">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
               <a class="product-item" href="/login">
-                <img src="<%= data.image %>" class="img-fluid product-thumbnail" />
-                <h3 class="product-title"><%= data.name %></h3>
-                <span class="icon-cross"><img src="/images/cross.svg" class="img-fluid" /></span>
+                <img src="<%= data.image %>" class="img-fluid product-thumbnail" alt="<%= data.name %>" />
+                <h3 class="product-title text-center mt-2"><%= data.name %></h3>
+                <span class="icon-cross d-block text-center mt-2">
+                  <img src="/images/cross.svg" class="img-fluid" />
+                </span>
               </a>
             </div>
           <% }) %>
@@ -115,31 +106,32 @@
     </div>
 
     <!-- Start New Arrivals -->
-    <h2 class="ms-3 newarrivalnew"><span style="color: #3b5d50">NEW </span>ARRIVALS</h2>
+    <h2 class="text-center mt-5 newarrivalnew">
+      <span style="color: #3b5d50">NEW</span> ARRIVALS
+    </h2>
     <div class="container-fluid">
       <div class="row">
         <% products.forEach((data, index) => { %>
-          <div class="col-12 col-md-4 col-lg-3 mb-md-0 newarrnew text-center" style="margin-top: 20px;">
-            <div class="newarrimg-box">
+          <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4 newarrnew text-center">
+            <div class="newarrimg-box position-relative">
               <a href="/login">
-                <img class="newarrimg" src="/<%= data.images[0] %>" alt="<%= data.name %>" />
+                <img class="img-fluid newarrimg" src="/<%= data.images[0] %>" alt="<%= data.name %>" />
               </a>
-              <i class="fa-regular fa-heart fa-xl mt-4 wishiconnew" style="color: #000000"></i>
+              <i class="fa-regular fa-heart fa-xl mt-4 wishiconnew position-absolute top-0 end-0 m-3"></i>
             </div>
-            <div class="newarrcolbox1new">
+            <div class="newarrcolbox1new mt-3">
               <a class="product-item" href="/login" style="text-decoration: none;">
                 <div class="tittlesnew"><%= data.name %></div>
               </a>
             </div>
           </div>
         <% }) %>
-        
       </div>
     </div>
 
     <br>
     <br>
-<%- include ("./layouts/footer.ejs") %>    
+    <%- include ("./layouts/footer.ejs") %>    
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/tiny-slider.js"></script>
