after settig cloudinary

--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -82,7 +82,7 @@
         <div class="col-12 col-md-4 col-lg-3 mb-md-0 newarrnew text-center" style="margin-top: 20px;">
           <div class="newarrimg-box">
             <a href="/productDetails/<%= data._id %>">
-              <img class="newarrimg" src="/<%= data.images[0] %>" alt="<%= data.name %>" />
+              <img class="newarrimg" src="<%= data.images[0] %>" alt="<%= data.name %>" />
             </a>
             <i class="fa-regular fa-heart fa-xl mt-4 wishiconnew" style="color: #000000"></i>
           </div>
