--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -275,16 +275,16 @@
                             <%= index + 1 %>
                           </td>
                           <td>
-                            <img src="/<%= data.images[0] %>" alt="image" />
+                            <img src="<%= data.images[0] %>" alt="image" />
                           </td>
                           <td>
-                            <img src="/<%= data.images[1] %>" alt="image" />
+                            <img src="<%= data.images[1] %>" alt="image" />
                           </td>
                           <td>
-                            <img src="/<%= data.images[2] %>" alt="image" />
+                            <img src="<%= data.images[2] %>" alt="image" />
                           </td>
                           <td>
-                            <img src="/<%= data.images[3] %>" alt="image" />
+                            <img src="<%= data.images[3] %>" alt="image" />
                           </td>
                           <td>
                             <%= data.name %>
