--- a/views/admin/updateProducts.ejs
+++ b/views/admin/updateProducts.ejs
@@ -182,7 +182,7 @@
               <% products.images.forEach((imageSrc, index)=> { %>
                 <div class="image-container">
                   <label for="productUpdateImage<%= index %>">
-                    <img class="image<%= index %>" src="/<%= imageSrc %>" alt="" />
+                    <img class="image<%= index %>" src="<%= imageSrc %>" alt="" />
                     <div class="overlay">
                       <span class="add-icon">+</span>
                     </div>
