--- a/views/users/starting.ejs
+++ b/views/users/starting.ejs
@@ -115,7 +115,7 @@
           <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4 newarrnew text-center">
             <div class="newarrimg-box position-relative">
               <a href="/login">
-                <img class="img-fluid newarrimg" src="/<%= data.images[0] %>" alt="<%= data.name %>" />
+                <img class="img-fluid newarrimg" src="<%= data.images[0] %>" alt="<%= data.name %>" />
               </a>
               <i class="fa-regular fa-heart fa-xl mt-4 wishiconnew position-absolute top-0 end-0 m-3"></i>
             </div>
