--- a/views/users/checkout.ejs
+++ b/views/users/checkout.ejs
@@ -148,7 +148,7 @@
                       <% cart.items.forEach((item)=> { %>
                         <tr>
                           <td>
-                            <img src="/<%= item.productId.images[0] %>" alt="<%= item.productId.name %>"
+                            <img src="<%= item.productId.images[0] %>" alt="<%= item.productId.name %>"
                               style="width: 50px; height: auto" />
                           </td>
                           <td>
