--- a/views/admin/Editordermanagement.ejs
+++ b/views/admin/Editordermanagement.ejs
@@ -105,7 +105,7 @@
                 <tr>
                   <td>
                     <% if (item.productData && item.productData.images && item.productData.images.length> 0) { %>
-                      <img src="/<%= item.productData.images[0] %>" alt="<%= item.productData.name %>"
+                      <img src="<%= item.productData.images[0] %>" alt="<%= item.productData.name %>"
                         style="width: 100px; height: auto;">
                       <% } else { %>
                         <span>No Image Available</span>
