--- a/views/users/orderDetails.ejs
+++ b/views/users/orderDetails.ejs
@@ -82,7 +82,7 @@
                     <a href="/productDetails/<%= product.productId._id %>">
                       <div
                         style="border: 1px solid #000000; padding: 8px; margin-right: 4px; border-radius: 5px; height: 172px;">
-                        <img src="/<%= product.productId.images[0] %>" alt="Product Image" class="product-image">
+                        <img src="<%= product.productId.images[0] %>" alt="Product Image" class="product-image">
                       </div>
                     </a>
                     <% } else { %>
